# onod3000

./: Cargo.toml  LICENSE  readme.md
include/: onod3000.h
src/: chisquaretest.rs  ffi.rs  lib.rs  python.rs  well19937c.rs
src/uniformity/: avalanche.rs  chi_bit.rs  chi_byte.rs  compression.rs  gaps.rs  ks.rs  mean_byte.rs  mod.rs  monobit.rs  pi.rs  prediction.rs  runs.rs  runups.rs  sanity.rs  shannon.rs  shells.rs  uncorrelation.rs
